# jdg.digital

./: .gitignore  Dockerfile  cleanup_node_modules.sh  docker-compose.yml  find_node_modules.sh  google.html  nginx.conf  package-lock.json  package.json  perplexity.html
apps/: .gitignore  README.md  analysis.md  ionic.config.json  migrations.json  nx.json  package-lock.json  package.json  portfolio.css  portfolio.html  todos.md  travel-splash.css  travel-splash.html  travel-start.css  (+2 more)
apps/apps/openclaw-board/projects/second-brain/: .gitignore  pyproject.toml
apps/apps/openclaw-board/projects/second-brain/docs/: second_brain.md
apps/apps/openclaw-board/projects/second-brain/openspec/changes/archive/2026-03-24-add-second-brain/: design.md  proposal.md  tasks.md
apps/apps/openclaw-board/projects/second-brain/openspec/changes/archive/2026-03-24-add-second-brain/specs/second-brain/: spec.md
apps/apps/openclaw-board/projects/second-brain/openspec/changes/archive/2026-03-24-integrate-milvus-vector-index/: design.md  proposal.md  tasks.md
apps/apps/openclaw-board/projects/second-brain/openspec/changes/archive/2026-03-24-integrate-milvus-vector-index/specs/second-brain/: spec.md
apps/apps/openclaw-board/projects/second-brain/openspec/specs/second-brain/: spec.md
apps/apps/openclaw-board/projects/second-brain/src/second_brain/: __init__.py  adapters.py  cli.py  context.py  indexing.py  layout.py  markdown.py  milvus_backend.py  models.py  operations.py  service.py  storage.py
apps/apps/openclaw-board/projects/second-brain/tests/: test_second_brain.py
(+711 files in other folders)
